# advent-of-code

./: .pre-commit-config.yaml  README.md  pyproject.toml
advent_of_code/current/: one_p2.py  two_main.py  two_main_p2.py
advent_of_code/current/one/: part_one.py  part_two.py
advent_of_code/current/two/: part_one.py  part_two.py  utils.py
tests/: sample2.txt  test_one.py  test_one_p2.py
tests/one/: test_alex.py  test_p1.py  test_p2.py
tests/one/sample_inputs/: 1.txt
tests/two/: test_two.py
